--- a/builder/WebsiteBuilder/WebsiteBuilder.csproj
+++ b/builder/WebsiteBuilder/WebsiteBuilder.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ServiceStack.Text">
-      <HintPath>..\..\Emby.Installation\ThirdParty\ServiceStack.Text\ServiceStack.Text.dll</HintPath>
+      <HintPath>..\ThirdParty\ServiceStack.Text\ServiceStack.Text.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
