--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,41 +1,40 @@
-{
-	"name": "Emby",
-	"icons": [
-		{
-			"src": "\/android-chrome-36x36.png",
-			"sizes": "36x36",
-			"type": "image\/png",
-			"density": "0.75"
-		},
-		{
-			"src": "\/android-chrome-48x48.png",
-			"sizes": "48x48",
-			"type": "image\/png",
-			"density": "1.0"
-		},
-		{
-			"src": "\/android-chrome-72x72.png",
-			"sizes": "72x72",
-			"type": "image\/png",
-			"density": "1.5"
-		},
-		{
-			"src": "\/android-chrome-96x96.png",
-			"sizes": "96x96",
-			"type": "image\/png",
-			"density": "2.0"
-		},
-		{
-			"src": "\/android-chrome-144x144.png",
-			"sizes": "144x144",
-			"type": "image\/png",
-			"density": "3.0"
-		},
-		{
-			"src": "\/android-chrome-192x192.png",
-			"sizes": "192x192",
-			"type": "image\/png",
-			"density": "4.0"
-		}
-	]
+﻿{
+  "name": "Emby",
+  "short_name": "Emby",
+  "start_url": "index.html",
+  "description": "Your media, your way.",
+  "lang": "en-US",
+  "related_applications": [
+    {
+      "platform": "android",
+      "location": "https://play.google.com/store/apps/details?id=com.mb.android"
+    },
+    {
+      "platform": "ios",
+      "location": "https://itunes.apple.com/us/app/emby/id992180193?ls=1&mt=8"
+    },
+    {
+      "platform": "web"
+    }
+  ],
+  "icons": [
+    {
+      "src": "touchicon72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "touchicon114.png",
+      "sizes": "114x114",
+      "type": "image/png"
+    },
+    {
+      "src": "touchicon144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    }
+  ],
+  "display": "standalone",
+  "theme_color": "#52B54B",
+  "gcm_sender_id": "487939608539"
 }
