--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
-  "name": "Emby",
-  "short_name": "Emby",
+  "name": "Emby Website",
+  "short_name": "Emby Website",
   "start_url": "index.html",
   "description": "Your media, your way.",
   "lang": "en-US",
