--- a/src/releases.json
+++ b/src/releases.json
@@ -34,7 +34,40 @@
     "created_at": "2023-09-19T20:15:27Z",
     "published_at": "2023-10-03T00:50:47Z",
     "assets": [
-
+      {
+        "url": "https://api.github.com/repos/MediaBrowser/Emby.Releases/releases/assets/128770439",
+        "id": 128770439,
+        "node_id": "RA_kwDOAYHGtM4HrOGH",
+        "name": "embyserver-netcore_4.8.0.51.zip",
+        "label": "",
+        "uploader": {
+          "login": "embybuilder",
+          "id": 54863925,
+          "node_id": "MDQ6VXNlcjU0ODYzOTI1",
+          "avatar_url": "https://avatars.githubusercontent.com/u/54863925?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/embybuilder",
+          "html_url": "https://github.com/embybuilder",
+          "followers_url": "https://api.github.com/users/embybuilder/followers",
+          "following_url": "https://api.github.com/users/embybuilder/following{/other_user}",
+          "gists_url": "https://api.github.com/users/embybuilder/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/embybuilder/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/embybuilder/subscriptions",
+          "organizations_url": "https://api.github.com/users/embybuilder/orgs",
+          "repos_url": "https://api.github.com/users/embybuilder/repos",
+          "events_url": "https://api.github.com/users/embybuilder/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/embybuilder/received_events",
+          "type": "User",
+          "site_admin": false
+        },
+        "content_type": "application/octet-stream",
+        "state": "uploaded",
+        "size": 47824709,
+        "download_count": 0,
+        "created_at": "2023-10-03T02:08:02Z",
+        "updated_at": "2023-10-03T02:08:23Z",
+        "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/embyserver-netcore_4.8.0.51.zip"
+      }
     ],
     "tarball_url": "https://api.github.com/repos/MediaBrowser/Emby.Releases/tarball/4.8.0.51",
     "zipball_url": "https://api.github.com/repos/MediaBrowser/Emby.Releases/zipball/4.8.0.51",
@@ -104,7 +137,7 @@
         "content_type": "application/vnd.android.package-archive",
         "state": "uploaded",
         "size": 245700161,
-        "download_count": 194,
+        "download_count": 202,
         "created_at": "2023-09-30T09:48:52Z",
         "updated_at": "2023-09-30T09:48:57Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/com.emby.embyserver_4.8.0.49.apk"
@@ -274,7 +307,7 @@
         "content_type": "application/vnd.android.package-archive",
         "state": "uploaded",
         "size": 248277304,
-        "download_count": 20,
+        "download_count": 21,
         "created_at": "2023-09-30T12:33:31Z",
         "updated_at": "2023-09-30T12:33:37Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/emby-server-asustor_4.8.0.49_x86-64.apk"
@@ -342,7 +375,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 171086808,
-        "download_count": 231,
+        "download_count": 234,
         "created_at": "2023-09-30T12:28:43Z",
         "updated_at": "2023-09-30T12:28:46Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/emby-server-deb_4.8.0.49_amd64.deb"
@@ -410,7 +443,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 84425156,
-        "download_count": 37,
+        "download_count": 39,
         "created_at": "2023-09-30T11:50:14Z",
         "updated_at": "2023-09-30T11:50:16Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/emby-server-deb_4.8.0.49_arm64.deb"
@@ -818,7 +851,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 61487772,
-        "download_count": 22,
+        "download_count": 24,
         "created_at": "2023-09-30T09:46:43Z",
         "updated_at": "2023-09-30T09:46:44Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/emby-server-freebsd13_4.8.0.49_amd64.pkg"
@@ -1362,7 +1395,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 183420953,
-        "download_count": 94,
+        "download_count": 96,
         "created_at": "2023-09-30T12:33:21Z",
         "updated_at": "2023-09-30T12:33:25Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/emby-server-qnap_4.8.0.49_x86_64.qpkg"
@@ -4490,7 +4523,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 128282220,
-        "download_count": 1984,
+        "download_count": 2006,
         "created_at": "2023-09-30T10:14:09Z",
         "updated_at": "2023-09-30T10:14:12Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/embyserver-win-x64-4.8.0.49.7z"
@@ -8860,7 +8893,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 47893430,
-        "download_count": 26,
+        "download_count": 27,
         "created_at": "2023-09-28T22:06:01Z",
         "updated_at": "2023-09-28T22:06:30Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.48/embyserver-netcore_4.8.0.48.zip"
@@ -9184,7 +9217,7 @@
         "content_type": "application/vnd.android.package-archive",
         "state": "uploaded",
         "size": 246656728,
-        "download_count": 7564,
+        "download_count": 7575,
         "created_at": "2023-08-24T14:48:08Z",
         "updated_at": "2023-08-24T14:50:57Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/com.emby.embyserver_4.7.14.0.apk"
@@ -9320,7 +9353,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 148693024,
-        "download_count": 13464,
+        "download_count": 13481,
         "created_at": "2023-08-25T06:35:07Z",
         "updated_at": "2023-08-25T06:36:48Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-deb_4.7.14.0_amd64.deb"
@@ -9354,7 +9387,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 72246232,
-        "download_count": 1194,
+        "download_count": 1195,
         "created_at": "2023-08-25T06:34:18Z",
         "updated_at": "2023-08-25T06:35:07Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-deb_4.7.14.0_arm64.deb"
@@ -9388,7 +9421,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 100370888,
-        "download_count": 662,
+        "download_count": 670,
         "created_at": "2023-08-25T06:33:09Z",
         "updated_at": "2023-08-25T06:34:18Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-deb_4.7.14.0_armhf.deb"
@@ -9830,7 +9863,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 159319581,
-        "download_count": 2765,
+        "download_count": 2768,
         "created_at": "2023-08-24T18:27:09Z",
         "updated_at": "2023-08-24T18:28:05Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-qnap_4.7.14.0_x86_64.qpkg"
@@ -9898,7 +9931,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 140776249,
-        "download_count": 882,
+        "download_count": 883,
         "created_at": "2023-08-24T18:25:48Z",
         "updated_at": "2023-08-24T18:26:38Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-rpm_4.7.14.0_x86_64.rpm"
@@ -10306,7 +10339,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 102850560,
-        "download_count": 128,
+        "download_count": 130,
         "created_at": "2023-08-24T18:53:56Z",
         "updated_at": "2023-08-24T18:54:32Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-synology-mono_4.7.14.0_x86.spk"
@@ -10714,7 +10747,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 73891840,
-        "download_count": 226,
+        "download_count": 227,
         "created_at": "2023-08-24T18:48:04Z",
         "updated_at": "2023-08-24T18:48:30Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-synology72_4.7.14.0_armv7.spk"
@@ -10816,7 +10849,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 149780480,
-        "download_count": 5002,
+        "download_count": 5005,
         "created_at": "2023-08-24T18:44:00Z",
         "updated_at": "2023-08-24T18:44:52Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-synology72_4.7.14.0_x86_64.spk"
@@ -10884,7 +10917,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 74792960,
-        "download_count": 144,
+        "download_count": 145,
         "created_at": "2023-08-24T18:47:12Z",
         "updated_at": "2023-08-24T18:47:38Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-synology7_4.7.14.0_armv7.spk"
@@ -10952,7 +10985,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 74260480,
-        "download_count": 144,
+        "download_count": 145,
         "created_at": "2023-08-24T18:43:34Z",
         "updated_at": "2023-08-24T18:44:00Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-synology7_4.7.14.0_armv8.spk"
@@ -11054,7 +11087,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 149964800,
-        "download_count": 1691,
+        "download_count": 1692,
         "created_at": "2023-08-24T18:41:23Z",
         "updated_at": "2023-08-24T18:42:15Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-synology7_4.7.14.0_x86_64.spk"
@@ -11292,7 +11325,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 149995520,
-        "download_count": 931,
+        "download_count": 933,
         "created_at": "2023-08-24T18:39:10Z",
         "updated_at": "2023-08-24T18:40:04Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-synology_4.7.14.0_x86_64.spk"
@@ -12006,7 +12039,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 216128378,
-        "download_count": 37,
+        "download_count": 38,
         "created_at": "2023-08-24T22:25:51Z",
         "updated_at": "2023-08-24T22:28:19Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-western_digital_pr2100_os5_4.7.14.0_x86_64.bin"
@@ -12176,7 +12209,7 @@
         "content_type": "application/x-zip-compressed",
         "state": "uploaded",
         "size": 109760385,
-        "download_count": 2232,
+        "download_count": 2233,
         "created_at": "2023-08-24T19:00:12Z",
         "updated_at": "2023-08-24T19:00:51Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/embyserver-osx-arm64-4.7.14.0.zip"
@@ -12244,7 +12277,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 112939094,
-        "download_count": 160274,
+        "download_count": 160376,
         "created_at": "2023-08-24T14:53:15Z",
         "updated_at": "2023-08-24T14:54:32Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/embyserver-win-x64-4.7.14.0.7z"
@@ -15526,7 +15559,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 113205435,
-        "download_count": 217007,
+        "download_count": 217009,
         "created_at": "2023-05-31T22:48:06Z",
         "updated_at": "2023-05-31T22:48:45Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.13.0/embyserver-win-x64-4.7.13.0.7z"
