--- a/src/releases.json
+++ b/src/releases.json
@@ -63,7 +63,7 @@
         "content_type": "application/vnd.android.package-archive",
         "state": "uploaded",
         "size": 245835614,
-        "download_count": 1,
+        "download_count": 5,
         "created_at": "2023-10-03T02:22:46Z",
         "updated_at": "2023-10-03T02:22:51Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/com.emby.embyserver_4.8.0.51.apk"
@@ -273,9 +273,9 @@
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/emby-server-asustor_4.8.0.51_x86-64.apk.md5"
       },
       {
-        "url": "https://api.github.com/repos/MediaBrowser/Emby.Releases/releases/assets/128779917",
-        "id": 128779917,
-        "node_id": "RA_kwDOAYHGtM4HrQaN",
+        "url": "https://api.github.com/repos/MediaBrowser/Emby.Releases/releases/assets/128781789",
+        "id": 128781789,
+        "node_id": "RA_kwDOAYHGtM4HrQ3d",
         "name": "emby-server-deb_4.8.0.51_arm64.deb",
         "label": "",
         "uploader": {
@@ -301,15 +301,15 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 84450736,
-        "download_count": 1,
-        "created_at": "2023-10-03T03:37:16Z",
-        "updated_at": "2023-10-03T03:37:18Z",
+        "download_count": 2,
+        "created_at": "2023-10-03T04:00:57Z",
+        "updated_at": "2023-10-03T04:00:59Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/emby-server-deb_4.8.0.51_arm64.deb"
       },
       {
-        "url": "https://api.github.com/repos/MediaBrowser/Emby.Releases/releases/assets/128779926",
-        "id": 128779926,
-        "node_id": "RA_kwDOAYHGtM4HrQaW",
+        "url": "https://api.github.com/repos/MediaBrowser/Emby.Releases/releases/assets/128781803",
+        "id": 128781803,
+        "node_id": "RA_kwDOAYHGtM4HrQ3r",
         "name": "emby-server-deb_4.8.0.51_arm64.deb.md5",
         "label": "",
         "uploader": {
@@ -336,8 +336,8 @@
         "state": "uploaded",
         "size": 33,
         "download_count": 0,
-        "created_at": "2023-10-03T03:37:20Z",
-        "updated_at": "2023-10-03T03:37:20Z",
+        "created_at": "2023-10-03T04:01:00Z",
+        "updated_at": "2023-10-03T04:01:00Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/emby-server-deb_4.8.0.51_arm64.deb.md5"
       },
       {
@@ -369,7 +369,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 116278404,
-        "download_count": 0,
+        "download_count": 1,
         "created_at": "2023-10-03T03:51:30Z",
         "updated_at": "2023-10-03T03:51:32Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/emby-server-deb_4.8.0.51_armhf.deb"
@@ -505,7 +505,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 37285900,
-        "download_count": 0,
+        "download_count": 1,
         "created_at": "2023-10-03T02:20:15Z",
         "updated_at": "2023-10-03T02:20:16Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/emby-server-freebsd12_4.8.0.51_amd64.tar.xz"
@@ -641,7 +641,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 37286296,
-        "download_count": 0,
+        "download_count": 1,
         "created_at": "2023-10-03T02:20:12Z",
         "updated_at": "2023-10-03T02:20:13Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/emby-server-freebsd13_4.8.0.51_amd64.tar.xz"
@@ -777,7 +777,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 86495867,
-        "download_count": 0,
+        "download_count": 2,
         "created_at": "2023-10-03T03:42:57Z",
         "updated_at": "2023-10-03T03:42:59Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/emby-server-qnap_4.8.0.51_arm_64.qpkg"
@@ -845,7 +845,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 24856,
-        "download_count": 0,
+        "download_count": 4,
         "created_at": "2023-10-03T03:53:16Z",
         "updated_at": "2023-10-03T03:53:16Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/emby-server-qnap_4.8.0.51_x86_64.qpkg"
@@ -1327,6 +1327,40 @@
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/embyserver-netcore_4.8.0.51.zip"
       },
       {
+        "url": "https://api.github.com/repos/MediaBrowser/Emby.Releases/releases/assets/128784298",
+        "id": 128784298,
+        "node_id": "RA_kwDOAYHGtM4HrReq",
+        "name": "embyserver-netframework_4.8.0.51.zip",
+        "label": "",
+        "uploader": {
+          "login": "embybuilder",
+          "id": 54863925,
+          "node_id": "MDQ6VXNlcjU0ODYzOTI1",
+          "avatar_url": "https://avatars.githubusercontent.com/u/54863925?v=4",
+          "gravatar_id": "",
+          "url": "https://api.github.com/users/embybuilder",
+          "html_url": "https://github.com/embybuilder",
+          "followers_url": "https://api.github.com/users/embybuilder/followers",
+          "following_url": "https://api.github.com/users/embybuilder/following{/other_user}",
+          "gists_url": "https://api.github.com/users/embybuilder/gists{/gist_id}",
+          "starred_url": "https://api.github.com/users/embybuilder/starred{/owner}{/repo}",
+          "subscriptions_url": "https://api.github.com/users/embybuilder/subscriptions",
+          "organizations_url": "https://api.github.com/users/embybuilder/orgs",
+          "repos_url": "https://api.github.com/users/embybuilder/repos",
+          "events_url": "https://api.github.com/users/embybuilder/events{/privacy}",
+          "received_events_url": "https://api.github.com/users/embybuilder/received_events",
+          "type": "User",
+          "site_admin": false
+        },
+        "content_type": "application/octet-stream",
+        "state": "uploaded",
+        "size": 49366898,
+        "download_count": 1,
+        "created_at": "2023-10-03T04:32:07Z",
+        "updated_at": "2023-10-03T04:32:14Z",
+        "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/embyserver-netframework_4.8.0.51.zip"
+      },
+      {
         "url": "https://api.github.com/repos/MediaBrowser/Emby.Releases/releases/assets/128780142",
         "id": 128780142,
         "node_id": "RA_kwDOAYHGtM4HrQdu",
@@ -1355,7 +1389,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 128278642,
-        "download_count": 70,
+        "download_count": 359,
         "created_at": "2023-10-03T03:41:35Z",
         "updated_at": "2023-10-03T03:41:38Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.51/embyserver-win-x64-4.8.0.51.7z"
@@ -1849,7 +1883,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 171086808,
-        "download_count": 235,
+        "download_count": 241,
         "created_at": "2023-09-30T12:28:43Z",
         "updated_at": "2023-09-30T12:28:46Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/emby-server-deb_4.8.0.49_amd64.deb"
@@ -2257,7 +2291,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 37273152,
-        "download_count": 0,
+        "download_count": 1,
         "created_at": "2023-09-30T09:46:56Z",
         "updated_at": "2023-09-30T09:46:58Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/emby-server-freebsd12_4.8.0.49_amd64.tar.xz"
@@ -2393,7 +2427,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 37268420,
-        "download_count": 15,
+        "download_count": 16,
         "created_at": "2023-09-30T09:46:57Z",
         "updated_at": "2023-09-30T09:46:58Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/emby-server-freebsd13_4.8.0.49_amd64.tar.xz"
@@ -2869,7 +2903,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 183420953,
-        "download_count": 96,
+        "download_count": 97,
         "created_at": "2023-09-30T12:33:21Z",
         "updated_at": "2023-09-30T12:33:25Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.49/emby-server-qnap_4.8.0.49_x86_64.qpkg"
@@ -7579,7 +7613,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 183535530,
-        "download_count": 107,
+        "download_count": 108,
         "created_at": "2023-09-29T01:00:36Z",
         "updated_at": "2023-09-29T01:00:41Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.8.0.48/emby-server-qnap_4.8.0.48_x86_64.qpkg"
@@ -10691,7 +10725,7 @@
         "content_type": "application/vnd.android.package-archive",
         "state": "uploaded",
         "size": 246656728,
-        "download_count": 7587,
+        "download_count": 7608,
         "created_at": "2023-08-24T14:48:08Z",
         "updated_at": "2023-08-24T14:50:57Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/com.emby.embyserver_4.7.14.0.apk"
@@ -10725,7 +10759,7 @@
         "content_type": "application/vnd.android.package-archive",
         "state": "uploaded",
         "size": 100434033,
-        "download_count": 10,
+        "download_count": 11,
         "created_at": "2023-09-10T16:04:33Z",
         "updated_at": "2023-09-10T16:05:09Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-asustor_4.7.14.0_arm.apk"
@@ -10793,7 +10827,7 @@
         "content_type": "application/vnd.android.package-archive",
         "state": "uploaded",
         "size": 212887750,
-        "download_count": 95,
+        "download_count": 96,
         "created_at": "2023-09-10T16:05:09Z",
         "updated_at": "2023-09-10T16:06:23Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-asustor_4.7.14.0_x86-64.apk"
@@ -10827,7 +10861,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 148693024,
-        "download_count": 13491,
+        "download_count": 13504,
         "created_at": "2023-08-25T06:35:07Z",
         "updated_at": "2023-08-25T06:36:48Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-deb_4.7.14.0_amd64.deb"
@@ -11337,7 +11371,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 159319581,
-        "download_count": 2770,
+        "download_count": 2771,
         "created_at": "2023-08-24T18:27:09Z",
         "updated_at": "2023-08-24T18:28:05Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-qnap_4.7.14.0_x86_64.qpkg"
@@ -11405,7 +11439,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 140776249,
-        "download_count": 883,
+        "download_count": 884,
         "created_at": "2023-08-24T18:25:48Z",
         "updated_at": "2023-08-24T18:26:38Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-rpm_4.7.14.0_x86_64.rpm"
@@ -12221,7 +12255,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 73891840,
-        "download_count": 227,
+        "download_count": 228,
         "created_at": "2023-08-24T18:48:04Z",
         "updated_at": "2023-08-24T18:48:30Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-synology72_4.7.14.0_armv7.spk"
@@ -12255,7 +12289,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 74188800,
-        "download_count": 564,
+        "download_count": 565,
         "created_at": "2023-08-24T18:48:30Z",
         "updated_at": "2023-08-24T18:48:56Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-synology72_4.7.14.0_armv8.spk"
@@ -12323,7 +12357,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 149780480,
-        "download_count": 5014,
+        "download_count": 5016,
         "created_at": "2023-08-24T18:44:00Z",
         "updated_at": "2023-08-24T18:44:52Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/emby-server-synology72_4.7.14.0_x86_64.spk"
@@ -13683,7 +13717,7 @@
         "content_type": "application/x-zip-compressed",
         "state": "uploaded",
         "size": 109760385,
-        "download_count": 2234,
+        "download_count": 2236,
         "created_at": "2023-08-24T19:00:12Z",
         "updated_at": "2023-08-24T19:00:51Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/embyserver-osx-arm64-4.7.14.0.zip"
@@ -13717,7 +13751,7 @@
         "content_type": "application/x-zip-compressed",
         "state": "uploaded",
         "size": 115601729,
-        "download_count": 1937,
+        "download_count": 1941,
         "created_at": "2023-08-24T19:00:51Z",
         "updated_at": "2023-08-24T19:01:31Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/embyserver-osx-x64-4.7.14.0.zip"
@@ -13751,7 +13785,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 112939094,
-        "download_count": 160529,
+        "download_count": 160631,
         "created_at": "2023-08-24T14:53:15Z",
         "updated_at": "2023-08-24T14:54:32Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/embyserver-win-x64-4.7.14.0.7z"
@@ -13785,7 +13819,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 102937974,
-        "download_count": 5213,
+        "download_count": 5222,
         "created_at": "2023-08-24T14:54:32Z",
         "updated_at": "2023-08-24T14:55:42Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.14.0/embyserver-win-x86-4.7.14.0.7z"
@@ -16999,7 +17033,7 @@
         "content_type": "application/x-zip-compressed",
         "state": "uploaded",
         "size": 113230517,
-        "download_count": 1503,
+        "download_count": 1504,
         "created_at": "2023-06-01T16:04:16Z",
         "updated_at": "2023-06-01T16:04:57Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.13.0/embyserver-osx.10.13-x64-4.7.13.0.zip"
@@ -20129,7 +20163,7 @@
         "content_type": "application/octet-stream",
         "state": "uploaded",
         "size": 148594658,
-        "download_count": 54094,
+        "download_count": 54095,
         "created_at": "2022-12-16T05:57:13Z",
         "updated_at": "2022-12-16T05:58:58Z",
         "browser_download_url": "https://github.com/MediaBrowser/Emby.Releases/releases/download/4.7.11.0/emby-server-deb_4.7.11.0_amd64.deb"
